Fix Sign gaps

--- a/src/components/Sign/style.scss
+++ b/src/components/Sign/style.scss
@@ -3,3 +3,10 @@
   align-items: center;
   gap: 5px;
 }
+
+.sign-in-on {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-right: 10px;
+}
